--- a/static/weather.html
+++ b/static/weather.html
@@ -14,6 +14,18 @@
         <button type="submit" id="sub_btn"></button>
     </form>
 
-    <script src="here.js"></script>
+    <script>
+        navigator.geolocation.getCurrentPosition(
+  (pos) => {
+    document.getElementById("latitude").value = pos.coords.latitude;
+    document.getElementById("longitude").value = pos.coords.longitude;
+    document.getElementById("sub_btn").click();
+  },
+  () => {
+    window.alert("Please Allow Location Access to proceed");
+  }
+);
+
+    </script>
 </body>
 </html>
